test/fail_compilation/fail93.d

void main(){
    int i = 1;
    volatile int i = 2; // should fail to compile
}

